<resources>
    <string name="app_name">لكارني</string>
    <string name="show_today_items">الائحة</string>
    <string name="guest_mode">  وضع ( الضيوف ! ) </string>
    <string name="left_of_quota">الباقي من السقف</string>
    <string name="total">  المجموع العام </string>
    <string name="totaltoday">المجموع </string>
    <string name="shop_name">اسم المحل</string>
    <string name="price_in_here">الثمن هنا</string>
    <string name="add">أظف</string>
    <string name="login">أدخل</string>
    <string name="password">القن السري</string>
    <string name="username">اسم المستعمل</string>
    <string name="login_page">صفحة الولوج</string>
    <string name="define_limit_here"> السقف هنا </string>
    <string name="set_your_guest_mode_quota"> السقف(الضيوف)</string>
    <string name="save">حفظ</string>
    <string name="username_here">اسم المستعمل هنا </string>
    <string name="confirm_password">تاكيد القن السري</string>
    <string name="nodataintable">لا يوجد بيانات</string>
    <string name="doyourealywantdeletall">حذف جميع البيانات , هل انت متاكد</string>
    <string name="doyourealywantorestore">نسخ جميع البيانات هل انت متاكد سيتم تعويض البيانات السابقة</string>
    <string name="reset_all">حذف الكل</string>
    <string name="add_items">أظف المنتوج</string>
    <string name="add_items_to_table">أظف المنتوج</string>
    <string name="show_lists">لائحة السلعة</string>
    <string name="settings">إعدادات</string>
    <string name="exit">الخروج</string>
    <string name="unknown">مجهول</string>
    <string name="noquotafound">لم يتم تحيد السقف بعد</string>
    <string name="surewannadel">هل فعلا تريد حذف المنتوج ?</string>
    <string name="surewannadelall">هل فعلا تريد الحذف ?</string>
    <string name="surewannaupdate">هل فعلا تريد تعديل المنتوج ?</string>
    <string name="yes">نعم</string>
    <string name="no">لا</string>
    <string name="limit">السقف المحدد</string>
    <string name="productname">إسم المنتوج</string>
    <string name="productprice">ثمن المنتوج</string>
    <string name="milk">الحليب</string>
    <string name="kilo">كيلو</string>
    <string name="_1_5">11.5</string>
    <string name="_180">180</string>
    <string name="price">الثمن</string>
    <string name="date">التاريخ</string>
    <string name="productinfo">معلومات السلعة</string>
    <string name="delete">احذف</string>
    <string name="goodsname">اسم السلعة هنا</string>
    <string name="shopnamehere">اسم المحل هنا</string>
    <string name="_12_01_20">12-01-2020</string>
    <string name="statistics">احصائيات </string>
    <string name="hajmistihlak">احصائيات الإستهلاك </string>
    <string name="paysuccess">Successfully Paid</string>
    <string name="payunsuccessful">Payment Unsuccessful</string>
    <string name="plzinsertamount">المرجو ادخال المبلغ</string>
    <string name="saved">تم الحفظ</string>
    <string name="notsaved">لم يتم الحفظ</string>
    <string name="insertinfofirst">المرجو ادخال المعلومات اولا</string>
    <string name="wrongpassoruser">الإسم والقن غير متطابقان</string>
    <string name="warning">تحذير</string>
    <string name="surewanapay">دفع المبلغ ، متاكد ؟</string>
    <string name="pay">دفع</string>
    <string name="remove">حذف</string>
    <string name="paylist">لائحة الدفع</string>
    <string name="archive">الأرشيف</string>
    <string name="main">الرئيسية</string>
    <string name="payarchive">ارشيف الدفع</string>
    <string name="archivestats">احصائيات الأرشيف</string>
    <string name="paymentdate">تاريخ الدفع</string>
    <string name="paidamount">المبلغ المدفوع</string>
    <string name="cancel">إلغاء</string>
    <string name="number">10000</string>
    <string name="paymentInfo">معلومات الدفع</string>
    <string name="momo">مومو</string>
    <string name="notificationTitle">تذكير</string>
    <string name="notificationMessage">لا تنسى تسجيل سلعة اليوم</string>
    <string name="quantity">الكمية</string>
    <string name="quantifier">العيار</string>
    <string name="product">السلعة</string>
    <string name="shop">المحل</string>
    <string name="deletefor">حذف لـ</string>

</resources>
