<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:elevation="4dp"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    app:cardBackgroundColor="#D5C5C5"
    app:cardCornerRadius="12dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layoutDirection="rtl"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ItemNameCV"
                style="@style/MainListViewCards"
                android:fontFamily="@font/amiri_bold"
                android:text="@string/milk"
                android:textAlignment="inherit"
                android:textSize="18sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/PriceCV"
                style="@style/MainListViewCards"
                android:text="@string/_180"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layoutDirection="inherit"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/quantityCV"
                style="@style/ListViewCards"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1_5" />

            <TextView
                android:id="@+id/quantifierCv"
                style="@style/ListViewCards"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kilo" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layoutDirection="inherit"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/molhanotCV"
                style="@style/ListViewCards"
                android:layout_marginEnd="2dp"
                android:text="@string/momo"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/dateCV"
                style="@style/ListViewCards"
                android:text="@string/_12_01_20"
                android:textAlignment="center"
                tools:targetApi="o" />
        </LinearLayout>

        <TextView
            android:id="@+id/id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />
    </LinearLayout>
</androidx.cardview.widget.CardView>