<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="1dp"
    android:elevation="4dp"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    app:cardCornerRadius="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardViews"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start|center_vertical"
            android:padding="4dp"
            android:src="@drawable/ic_shopping" />

        <LinearLayout
            android:layout_width="47dp"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/ArchivequantityCV"
                android:text="@string/_1_5"
                style="@style/ListViewCards" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ArchivequantifierCv"
                style="@style/ListViewCards"
                android:text="@string/kilo"
               />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ArchiveItemNameCV"
                style="@style/ListViewCards"
                android:text="@string/milk"
               />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ArchivePriceCV"

                android:text="@string/_180"
                style="@style/ListViewCards" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ArchivemolhanotCV"
                style="@style/ListViewCards"
                android:text="@string/momo"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ArchivedateCV"
                android:text="@string/_12_01_20"
                style="@style/ListViewCards"/>
        </LinearLayout>

        <TextView
            android:id="@+id/Archiveid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />
    </LinearLayout>
</androidx.cardview.widget.CardView>