<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".Archieve.ArchEddit">


    <Button
        android:id="@+id/menubuttonqrchEd"
        android:layout_width="29dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ic_baseline_menu_24"
        android:onClick="showPopupqrchEd"
        ads:layout_constraintBottom_toTopOf="@+id/linearLayout8"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintHorizontal_bias="0.934"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/justborderz"
        android:elevation="4dp"
        android:orientation="vertical"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toBottomOf="@+id/menubuttonEd">


        <TextView
            style="@style/MainTextViews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/productinfo" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="4dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ItemNameModArch"
                style="@style/EditTextText"
                android:hint="@string/productname" />

            <TextView
                style="@style/SubTextViews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/productname" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="8dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/quantityModArch"
                style="@style/EditTextViewsNumbers"
                android:hint="@string/_180" />

            <TextView
                style="@style/SubTextViews"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/quantity" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="8dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/priceModArch"
                style="@style/EditTextViewsNumbers"
                tools:hint="@string/number" />

            <TextView
                style="@style/SubTextViews"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/price" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="8dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ShopNmviewArch"
                style="@style/EditTextText"
                android:hint="@string/shop_name" />

            <TextView
                style="@style/SubTextViews"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/shop_name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="8dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ArchdateEdit"
                style="@style/EditTextText"
                android:hint="@string/_12_01_20"
                android:inputType="date" />

            <TextView
                style="@style/SubTextViews"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/date" />
        </LinearLayout>


    </LinearLayout>


    <com.google.android.gms.ads.AdView
        android:id="@+id/ArchAD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity=""
        android:layout_margin="8dp"
        android:layout_marginBottom="16dp"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-9838187586217611/9542315857"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>