<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        tools:context=".Payment.PaymentEddit">

    <Button
        android:id="@+id/menubuttonEdP"
        android:layout_width="29dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/ic_baseline_menu_24"
        android:onClick="showPopupEdp"
        ads:layout_constraintBottom_toTopOf="@+id/linearLayout9"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintHorizontal_bias="0.958"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/justborderz"
        android:elevation="8dp"
        android:orientation="vertical"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toBottomOf="@+id/menubuttonEdP">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="8dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                style="@style/MainTextViews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paymentInfo" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="8dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/paidShopNameView"
                style="@style/EditTextText"
                android:hint="@string/productname" />

            <TextView
                style="@style/SubTextViews"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/shop_name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="8dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/paidAmountView"
                style="@style/EditTextViewsNumbers"
                android:hint="@string/_180" />

            <TextView
                style="@style/SubTextViews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paidamount" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="8dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/paymentDAteView"
                style="@style/EditTextText"
                android:hint="@string/_12_01_20" />

            <TextView
                style="@style/SubTextViews"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/paymentdate" />
        </LinearLayout>


    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity=""
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-9838187586217611/9542315857"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>