<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:background="@color/GreenP3"
    android:elevation="8dp"
    android:orientation="vertical"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/GreenP4"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginTop="4dp"
            android:padding="4dp"
            android:src="@drawable/ic_shopping" />

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/quantityCVArch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="2dp"
                android:maxLines="1"
                android:text="@string/_1_5"
                android:textAlignment="center"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/quantifierCvArch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:maxLines="1"
                android:textAlignment="center"
                android:padding="2dp"
                android:text="@string/kilo"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="4dp"

            android:orientation="vertical">

            <TextView
                android:id="@+id/ItemNameCVArch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:maxWidth="140dp"
                android:maxHeight="40dp"
                android:maxLines="1"
                android:padding="2dp"
                android:text="@string/milk"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="4dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/PriceCVArch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:padding="2dp"
                android:text="@string/_180"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="4dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/molhanotCVArch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layoutDirection="inherit"
                android:maxLines="1"
                android:padding="2dp"
                android:text="مومو"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="4dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dateCVArch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:padding="2dp"
                android:text="@string/_12_01_20"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="italic" />
        </LinearLayout>

        <TextView
            android:id="@+id/idArch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />
    </LinearLayout>
</androidx.cardview.widget.CardView>